# python-project-174

./: README.md  pyproject.toml
.github/workflows/: python-test.yml
gendiff/: generate_diff.py  parsers.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file1_recursive.json
