[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compara dos archivos de configuracion y muestra las diferencias"
authors = [
    {name = "Manuel Parada"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[tool.poetry]
packages = [{include = "gendiff"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
